<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">搜狗语音合成</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="version">SogouTTS_v3.1</string>
    <string name="speed">Speed(0.5~2.0)</string>
    <!--<string name="synth_content">小时候和弟弟一块偷妈妈钱买零食，被发现了。妈妈把我们俩叫到跟前让我们重演犯罪过程。我就指着钱说：弟弟，咱们把钱拿走买吃的吧？这时他说：“哥，咱们不能这么干啊。”</string>-->
    <!--<string name="synth_content">草场上，教官训练一群新兵，大喊,卧倒。一个新兵问，卧哪？卧草里吗？新兵卒，享年十八</string>-->
    <string name="synth_content">搜狗是中国互联网领先的搜索、输入法、浏览器和其它互联网产品及服务提供商。您只需花费5分钟的时间，就可以初步学会如何使用搜狗语音合成服务。</string>
    <!--<string name="synth_content">The problem exists if you have added "ActionBarSherlock" and "DropBox" jars to your project. To solve the problem, add the below line to your.The warning will be ignored and it will work because each of the jars alone are working. So I think, this will be the bug in ProGuard, if both are added.</string>-->

    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="batch_mode">BatchMode</string>
    <string name="replay">Replay</string>
    <string name="next">Next</string>
    <string name="player_initialized">PLAYER INITIALIZED</string>
    <string name="synth_initialized_failure">Synthesizer INITIALIZED FAILURE</string>
    <string name="state_playing">STATE: PLAYING</string>
    <string name="state_idle">STATE: IDLE</string>
    <string name="state_error">STATE: ERROR! errCode=</string>
    <string name="state_pause">STATE: PAUSE</string>
    <string name="state_resume">STATE: RESUME</string>
    <string name="state_file_not_found">STATE: Test File Not Found</string>
    <string name="state_file_read_failure">STATE: File Read Failure</string>
    <string name="state_last_content_finished">STATE: Last Content Finished</string>
    <string name="state_file_close_failure">STATE: File Close Failure</string>
    <string name="add">Add</string>

</resources>
